--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,10 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+.no-outline-on-focus button:focus,
+.no-outline-on-focus a:focus {
+  outline: none !important;
+}
 a {
   color: inherit;
   text-decoration: none;
